Added event reservation functions
